fix: reduce right margin of header menu for improved spacing

--- a/blowcomotion/static/scss/_responsive.scss
+++ b/blowcomotion/static/scss/_responsive.scss
@@ -13,7 +13,7 @@
     }
   
     .header__menu {
-      margin-right: 30px;
+      margin-right: 25px;
     }
   
     .service__item {
